--- a/app/globals.css
+++ b/app/globals.css
@@ -4,4 +4,10 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  color: "#1d2228";
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
