--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,23 @@ input[type=number]::-webkit-outer-spin-button {
     transform: rotate(360deg);
   }
 }
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #667c3e !important;
+  border-color: #667c3e !important;
+  color: #000 !important;
+}
+.ant-checkbox .ant-checkbox-inner {
+  border-color: #667c3e !important;
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #667c3e !important;
+  border-color: #667c3e !important;
+}
+.ant-btn:hover .ant-btn:focus{
+  background-color: #667c3e !important;
+  border-color: #667c3e !important;
+  color: #000 !important;
+}
+.no-scroll{
+  overflow: hidden;
+}
